grammar.js
    source_file: $ => optional($._container_members),

    _container_members: $ => seq(
      repeat($.container_doc_comment),
      repeat($._container_declaration),
      repeat(seq($.container_field, ',')),
      choice(
        $.container_field,
        repeat1($._container_declaration),
      ),
    ),

    global_variable_declaration: $ => seq(
      optional(choice(
        'export',
        seq('extern', optional($.string)),
      )),
      optional('threadlocal'),
      $._variable_declaration_header, // VarDeclProto
      optional(seq('=', $.expression)),
      ';',
    ),

    _variable_declaration_header: $ => prec(1, seq(
      choice('const', 'var'),
      $.identifier,
      optional(seq(
        ':',
        field('type', $._type_expression),
      )),
      optional($.byte_alignment),
      optional($.address_space),
      optional($.link_section),
    )),

    function_declaration: $ => choice(
      seq(
        optional(choice(
          'export',
          'inline',
          'noinline',
        )),
        $._function_prototype,
        choice(
          ';',
          field('body', $.block),
        ),
      ),
      // extern fn cannot be followed by a block
      seq(
        seq('extern', optional($.string)),
        $._function_prototype,
        ';',
      ),
    ),

    _function_prototype: $ => prec.left(seq(
      'fn',
      optional(field('name', $.identifier)),
      $.parameters,
      optional($.byte_alignment),
      optional($.address_space),
      optional($.link_section),
      optional($.calling_convention),
      optional('!'),
      field('type', $._type_expression),
    )),

    parameters: $ => seq(
      '(',
      optionalCommaSep($.parameter),
      ')',
    ),

    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    _statement: $ => choice(
      $.statement,
      $._labeled_statement,
      $._variable_declaration_expression_statement,
    ),

    _if_prefix: $ => seq(
      'if',
      '(',
      field('condition', $.expression),
      ')',
      optional($.payload),
    ),

    for_statement: $ => seq(
      $._for_prefix,
      $._conditional_body,
    ),

    _for_prefix: $ => seq(
      'for',
      '(',
      optionalCommaSep(seq(
        $.expression,
        optional(seq('..', $.expression)),
      )),
      ')',
      $.payload,
    ),

    _conditional_body: $ => choice(
      seq(
        field('body', $._block_expression),
        optional($.else_clause),
      ),
      seq(
        field('body', $._general_expression),
        choice(';', $.else_clause),
      ),
    ),

    payload: $ => seq('|', optionalCommaSep1(seq(optional('*'), $.identifier)), '|'),

    if_expression: $ => prec.right(1, seq(
      $._if_prefix,
      $.expression,
      optional(seq('else', optional($.payload), $.expression)),
    )),

    binary_expression: $ => {
      const table = [
        ['or', PREC.LOGICAL_OR],
        ['and', PREC.LOGICAL_AND],
        ['==', PREC.EQUAL],
        ['!=', PREC.EQUAL],
        ['>', PREC.EQUAL],
        ['>=', PREC.EQUAL],
        ['<=', PREC.EQUAL],
        ['<', PREC.EQUAL],
        ['&', PREC.BITWISE],
        ['^', PREC.BITWISE],
        ['|', PREC.BITWISE],
        ['orelse', PREC.BITWISE],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['<<|', PREC.SHIFT],
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['++', PREC.ADD],
        ['+%', PREC.ADD],
        ['-%', PREC.ADD],
        ['+|', PREC.ADD],
        ['-|', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
        ['**', PREC.MULTIPLY],
        ['*%', PREC.MULTIPLY],
        ['*|', PREC.MULTIPLY],
        ['||', PREC.MULTIPLY],
      ];

      return choice(...table.map(([operator, precedence]) => {
        return prec.left(precedence, seq(
          field('left', $.expression),
          // @ts-ignore:
          field('operator', operator),
          field('right', $.expression),
        ));
      }));
    },

    continue_expression: $ => prec.right(1, seq(
      'continue',
      optional($.break_label),
      optional($.expression),
    )),

    try_expression: $ => prec.left(PREC.UNARY, seq('try', $.expression)),

    suffix_expression: $ => prec.right(PREC.MEMBER, seq(
      // where the head is just an identifier and the next node is `(arguments)`
      // this is a non-method function call
      field('head', $.primary_type_expression),
      repeat1(choice(
        field('arguments', $.arguments),
        alias($._index_suffix, $.index_expression),
        alias($._range_suffix, $.range_expression),
        alias($._field_suffix, $.field_expression),
        '.*',
        '.?',
      )),
    )),

    _field_suffix: $ => seq(
      '.',
      field('member', $.identifier),
    ),

    _index_suffix: $ => seq(
      '[',
      field('index', $.expression),
      optional(seq(':', field('sentinel', $.expression))),
      ']',
    ),

    _range_suffix: $ => seq(
      '[',
      field('left', $.expression),
      '..',
      optional(field('right', $.expression)),
      ']',
    ),

    arguments: $ => seq('(', optionalCommaSep($.expression), ')'),

    builtin_function: $ => seq(
      $.builtin_identifier,
      $.arguments,
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
        $.escape_sequence,
      )),
      '"',
    ),

    builtin_type: _ => choice(...builtinTypes),

    builtin_identifier: _ => /@[A-Za-z_][A-Za-z0-9_]*/,

    identifier: $ => choice($._identifier, seq('@', alias($.string, $._string))),
    _identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
